...
          onPress={() => {
            if (firstAppId) {
              navigation.navigate("ScheduleDemo", { applicationId: firstAppId });
            }
          }}
        >
          Schedule new demo
        </PressableButton>
      </View>

      <Text
        style={{
          color: colors.ink,
...
